SIFULAN theme update

--- a/css/_welcome_page.scss
+++ b/css/_welcome_page.scss
@@ -36,6 +36,16 @@ body.welcome-page {
             z-index: $zindex2;
         }
 
+        .header-text-disclaimer {
+            display: flex;
+            flex-direction: column;
+            margin-top: $welcomePageHeaderTextMarginTop;
+            margin-bottom: $welcomePageHeaderTextMarginBottom;
+            max-width: calc(100% - 40px);
+            width: 650px;
+            z-index: $zindex2;
+        }
+
         .header-text-title {
             color: $welcomePageTitleColor;
             font-size: $welcomePageHeaderTextTitleFontSize;
